doc: :memo: update swagger docs
